testsuite/tests/indexed-types/should_fail/ExplicitForAllFams4a.stderr

ExplicitForAllFams4a.hs:8:12: error: [GHC-30337]
    • Type variable ‘b’ is bound by a forall,
        but not used in the family instance.
    • In the equations for closed type family ‘H’
      In the type family declaration for ‘H’

ExplicitForAllFams4a.hs:9:10: error: [GHC-53634]
    • Out of scope type variable ‘b’ in the RHS of a family instance.
        All such variables must be bound on the LHS.
    • In the equations for closed type family ‘H’
      In the type family declaration for ‘H’
